--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development --entry ./leadmanager/frontend/src/index.js --output-path ./leadmanager/frontend/static/frontend/",
-    "build": "webpack --mode production --entry ./leadmanager/frontend/src/index.js --output-path ./leaddmanager/frontend/static/frontend/main.js postcss ./leadmanager/frontend/css/tailwind.css -o ./leadmanager/frontend/static/frontend/css/tailwind-output.css"
+    "dev": "webpack --mode development --watch --entry ./leadmanager/frontend/src/index.js --output-path ./leadmanager/frontend/static/frontend/",
+    "build": "webpack --mode production --entry ./leadmanager/frontend/src/index.js --output-path ./leadmanager/frontend/static/frontend/"
   },
   "keywords": [],
   "author": "",
@@ -21,10 +21,18 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.1",
+    "axios": "^0.21.1",
     "postcss-cli": "^8.3.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-alert": "^7.0.2",
+    "react-alert-template-basic": "^1.0.0",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-transition-group": "^4.4.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "tailwindcss": "^2.0.2"
   }
 }
